--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -46,7 +46,7 @@
 		box-shadow: none;
 
 		> .panel {
-			background: #ffffff;
+			background: #2e293a;
 			margin-bottom: 2em;
 
 			&:last-child {
